# tmux-kanban

./: AGENT.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  TODO.md  pyproject.toml  tmux.conf.recommended
docs/: advanced.md
docs/design/: README.md
tmux_kanban/: SUMMARY.md  __init__.py  __main__.py  install_systemd.py  server.py
tmux_kanban/static/: app.js  index.html  style.css
